# Sphinx-CICD-testing

./: README.md  pyproject.toml
.github/workflows/: code-quality.yml  docs.yml
docs/source/: conf.py  getting-started.rst  index.rst
docs/source/api/: modules.rst
docs/source/api/_generated/: sphinxcicdtesting.module_test.rst  sphinxcicdtesting.objects.rst  sphinxcicdtesting.rst
src/sphinxcicdtesting/: __init__.py  module_test.py  objects.py
