[project]
name = "sphinxcicdtesting"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ezequiel Rivero", email = "ezequielmrivero@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.0",
    "polars>=1.30.0",
]

[project.optional-dependencies]
docs = [
  "sphinx>=7",
  # "furo",                        # clean HTML theme
  # "sphinx-conestack-theme",  # clean HTML theme
  "sphinx-rtd-theme",            # clean HTML theme
  "sphinx-autodoc-typehints",    # from-code type hints → docs
  "sphinx-copybutton",           # quality-of-life
  "sphinx-autobuild",      # To test the docs locally
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
